# delafossite_cwgnn

./: .gitignore  pyproject.toml  run_cwgnn_classification_structure.py
checkpoints/: best_cwgnn_classifier.pth
delafossite_cwgnn/concept_extraction/: include.py  main.py
delafossite_cwgnn/data/: element_reference_energies.csv
delafossite_cwgnn/graph_construction/: include.py  main.py
delafossite_cwgnn/misc/: dataset_viz.ipynb
delafossite_cwgnn/models/: CWEGConv.py  CWGATConv.py  CWGConv.py  cw_layer.py  iter_norm.py  train_test.py
delafossite_cwgnn/preprocessing/: get_elemental_reference_energies.py  main_delafossite_formation_energy.py  main_delafossite_structure_type_from_HT.py
delafossite_cwgnn/utils/: gc_datasets.py  io.py
tests/: test_cuda.py  test_cw.py  test_datasets.py  test_dgl.py
